--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
   <body>
     <h1> Welcome! </h1>
-    
+<img src="https://avatars.githubusercontent.com/u/84860007?v=4">
+
     <image src="https://avatars.githubusercontent.com/u/84860007?v=4">
     
   Hello there, awesome person!
