--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <img src="https://avatars.githubusercontent.com/u/84860007?v=4">
 
     <ol>
-      <li> gmail.com </li>
-      <li> google.com </li>
+      <li> <a href="https://google.com>gmail">Gmail</a> </li>
+      <li> <a href="https://google.com">Google</a> </li>
     </ol>
     
   Hello there, awesome person!
