Add style to webpage
Using stylesheet provided by bot

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   
   <head>
+    <link rel="stylesheet" href="style.css">
     <title> My Awesome Home Page </title>
   </head>
   
@@ -9,6 +10,7 @@
     <h1> Welcome! </h1>
     <img src="https://avatars.githubusercontent.com/u/84860007?v=4">
 
+    My Fav Websites:
     <ol>
       <li> <a href="https://google.com>gmail">Gmail</a> </li>
       <li> <a href="https://google.com">Google</a> </li>
